--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -44,7 +44,7 @@
                 card_view:cardCornerRadius="4dp"
                 card_view:cardElevation="5dp">
 
-                <com.github.mikephil.charting.charts.HorizontalBarChart
+                <com.sreevidya.opal.views.MyHorizontalBarChart
                     android:id="@+id/horizontalBarChart"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
@@ -60,8 +60,24 @@
                 card_view:cardCornerRadius="4dp"
                 card_view:cardElevation="5dp">
 
-                <com.github.mikephil.charting.charts.LineChart
+                <com.sreevidya.opal.views.MyLineChart
                     android:id="@+id/lineChart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view4"
+                android:layout_width="280dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="5dp">
+
+                <com.sreevidya.opal.views.MyLineChart
+                    android:id="@+id/duoLineChart"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
@@ -76,7 +92,7 @@
                 card_view:cardCornerRadius="4dp"
                 card_view:cardElevation="5dp">
 
-                <com.github.mikephil.charting.charts.PieChart
+                <com.sreevidya.opal.views.MyPieChart
                     android:id="@+id/pieChart"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
